--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <main>
         <section class="module parallax parallax-1">
-            <div class="container"></div>
+            <div class="container fade-in one"><h1 class="fade-in"><span class="fade-in one">Need</span> <span class="fade-in two">Help?</span></h1></div>
         </section>
         <section class="module content">
             <div class="flex-container tag-line">
